# sqlmod

./: .gitignore  .pryrc  Cargo.toml  Makefile  README.md  Rakefile  build.rs  parser.rustpeg  query_selector.gemspec  setup.py  sqlmod.gemspec  tox.ini
bindings/: queryselector.rb  stringmap.py  stringmap.rb
bindings/rb/: genrb.rb  test.rb
ext/: Makefile  extconf.rb
lib/: query_selector.rb  sqlmod.rb
sqlmod/: __init__.py  bridge.py
src/: c.rs  errors.rs  lib.rs  lines.rs  parser.rs  peg.rs  queries.rs  query.rs  stringmap.rs
src/c/: mod.rs  strhandle.rs
src/tests/: attributes.rs  attributes.sql  long_example.rs  long_example.sql  mod.rs  one-with-leading-comments.sql  one-with-leading-whitespace.sql  one-with-middle-comment.sql  one-with-trailing-comment.sql  one-with-trailing-whitespace.sql  one.sql  pg_examples.rs  pg_examples.sql  single_query.rs
