[package]
name = "query-selector"
version = "0.1.0"
authors = ["Jason Dusek <jason.dusek@gmail.com>"]
# build = "build.rs"
readme = "README.md"
license = "Apache-2.0/MIT"
homepage = "https://gitlab.com/solidsnack/query-selector/"
repository = "https://gitlab.com/solidsnack/query-selector.git"
documentation = "https://docs.rs/query-selector"
description = "Organize app queries in an annotated SQL file."

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
error-chain = "*"
libc = "^0.2"
linked-hash-map = "^0.3"

[build-dependencies]
# rusty-cheddar = "^0.3"
# peg = "^0.4"