[package]
name = "sqlmod"
version = "0.1.0"
authors = ["Jason Dusek <jason.dusek@gmail.com>"]
build = "build.rs"
readme = "README.md"
license = "Apache-2.0/MIT"
homepage = "https://gitlab.com/solidsnack/sqlmod/"
repository = "https://gitlab.com/solidsnack/sqlmod.git"
documentation = "https://docs.rs/sqlmod"
description = "Organize app queries in an annotated SQL file."

[lib]
crate-type = ["lib", "cdylib"]

[features]
# Regenerate grammar file and headers file from source.
codegen = ["peg", "rusty-cheddar"]


[dependencies]
error-chain = "*"
libc = "^0.2"
linked-hash-map = "^0.3"

[build-dependencies]
peg = { version = "^0.4", optional = true }
rusty-cheddar = { version = "^0.3", optional = true }
